Ajusta o footer da index

--- a/index.html
+++ b/index.html
@@ -156,25 +156,21 @@
             <img src="images/ITS_Logos.png">
           </a>
         </div>
-
         <div class="contatos">
           <p>Contatos</p>
 
           <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
           <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
         </div>
-      </div>
-
-      <div class="flex-container">
         <div class="politica">
-
-          &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
-
+            &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
         </div>
-      </div>
-      <p style="text-align: center; margin-left:30px;">
+        <p class="endereco">
         2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
-      </p>
+        </p>
+     
+      </div>
+
     </footer>
 
 
