--- a/Videos/video1.html
+++ b/Videos/video1.html
@@ -32,32 +32,26 @@
             </div>
     </div>
     <footer>
-
-        <div class="flex-container">
-            <div>
-                <a href="https://itsrio.org/pt/home/">
-                    <img src="../images/ITS_Logos.png">
-                </a>
-            </div>
-
-            <div class="contatos">
-                <p>Contatos</p>
-
-                <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
-                <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
-            </div>
+      <div class="flex-container">
+        <div>
+          <a href="https://itsrio.org/pt/home/">
+            <img src="../images/ITS_Logos.png">
+          </a>
         </div>
+        <div class="contatos">
+          <p>Contatos</p>
 
-        <div class="flex-container">
-            <div class="politica">
-
-                &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
-
-            </div>
+          <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
+          <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
         </div>
-        <p style="text-align: center; margin-left:30px;">
-            2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
+        <div class="politica">
+            &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
+        </div>
+        <p class="endereco">
+        2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
         </p>
+     
+      </div>
     </footer>
 </body>
 
