--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         <button class="btn amareloclaro11" onclick="filterSelection('eixoOnze')"> Eixo 11</button>
         <button class="btn ultimo12" onclick="filterSelection('eixoDoze')"> Eixo 12</button>
 
-<script>
-function seleciona() {
-  document.getElementsByClassName('selecao').innerHTML = "X";
-}
+        <script>
+          function seleciona() {
+            document.getElementsByClassName('selecao').innerHTML = "X";
+          }
 
-document.getElementById("btn").outerHTML = "";
+          document.getElementById("btn").outerHTML = "";
 
-</script>
+        </script>
 
       </div>
       <div class="descricao">
@@ -47,14 +47,6 @@ document.getElementById("btn").outerHTML = "";
     </header>
 
     <div class="container">
-      <a href="./Artigos/artigo1.html"><div class="rosa1 filterDiv eixo1">
-        <p class="DataPublicacao">12 de novembro de 2020</p>
-        <h2 class="TituloPublicacao">Introdução ao Projeto</h2>
-        <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao">Eixo 1</p>
-        <p class="TipoPublicacao">Artigo</p>  
-
-      </div></a>
       <a href="./Videos/video1.html"><div class="rosa1 filterDiv eixo1">
         <p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
@@ -63,12 +55,21 @@ document.getElementById("btn").outerHTML = "";
         <p class="TipoPublicacao2">Vídeo</p>
       </div></a>
 
+      <a href="./Artigos/artigo1.html"><div class="rosa1 filterDiv eixo1">
+        <p class="DataPublicacao">12 de novembro de 2020</p>
+        <h2 class="TituloPublicacao">Introdução ao Projeto</h2>
+        <p class="AutorPublicacao">Por Sérgio Branco</p>
+        <p class="EixoPublicacao">Eixo 1</p>
+        <p class="TipoPublicacao">Artigo</p>  
+
+      </div></a>
+
       <div class="rosa1 filterDiv eixo1">
         <p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
         <p class="EixoPublicacao2">Eixo 1</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="TipoPublicacao2">Artigo</p>
       </div></a>
       <div class="laranja2 filterDiv eixo2">
         <p class="DataPublicacao">10 de novembro de 2020</p>
