--- a/Videos/video1.html
+++ b/Videos/video1.html
@@ -12,47 +12,49 @@
 
 <body>
     <header class="topo">
-        <a href="../index.html"><img src="../images/logo.png" height="94" width="421" style="margin-left:8%;"> </a>
-        <nav style="margin-left:8%;">
+        <a href="../index.html"><img src="../images/logo.png" height="94" width="421"> </a>
+        <nav>
             <a href="../index.html"><span style="color: #343434;">&#8617</span> </a>
 
             <a href="javascript:history.back()" style="text-decoration: underline; color: black;">
                 Voltar
             </a>
         </nav>
+        <br>
 
-    </header>
-    <div class="container-video" style="text-align: center; text-indent:2em;">
-        <h2>Video 1</h2><br>
+        <div class="container-video" style="text-align: left;">
+            <h2>Video 1</h2><br>
 
-        <br><br>
+        </header>
 
-            <div class="video-responsive" style="text-align: center;" >
-                <iframe src="https://www.youtube.com/embed/uBF7mp7H_ng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-            </div>
+
+
+        <div class="video-responsive" style="text-align: center;" >
+            <iframe src="https://www.youtube.com/embed/uBF7mp7H_ng" height="660" width="1080" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
     </div>
     <footer>
       <div class="flex-container">
         <div>
           <a href="https://itsrio.org/pt/home/">
             <img src="../images/ITS_Logos.png">
-          </a>
-        </div>
-        <div class="contatos">
-          <p>Contatos</p>
+        </a>
+    </div>
+    <div class="contatos">
+      <p>Contatos</p>
 
-          <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
-          <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
-        </div>
-        <div class="politica">
-            &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
-        </div>
-        <p class="endereco">
-        2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
-        </p>
-     
-      </div>
-    </footer>
+      <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
+      <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
+  </div>
+  <div class="politica">
+    &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
+</div>
+<p class="endereco">
+    2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
+</p>
+
+</div>
+</footer>
 </body>
 
 
