Substituição dos elementos do card
agora não é mais texto, substituí o fundo dos card por uma imagem

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="btn rosa1" onclick="filterSelection('eixo1'); seleciona()"> Eixo 1 <div class="selecao" ></div>
         </button>
         <button class="btn laranja2" onclick="filterSelection('eixo2'); seleciona()"> Eixo 2<div class="selecao"></div></button>
-        <button class="btn amarelo3" onclick="filterSelection('eixo3')"> Eixo 3</button>
+        <button class="btn amarelo3" onclick="filterSelection('eixo3')"> Eixo 3</button> 
         <button class="btn verde4" onclick="filterSelection('eixo4')"> Eixo 4</button>
         <button class="btn cinza5" onclick="filterSelection('eixo5')"> Eixo 5</button>
         <button class="btn azulclaro6" onclick="filterSelection('eixo6')"> Eixo 6</button>
@@ -47,113 +47,115 @@
     </header>
 
     <div class="container">
-      <a href="./Videos/video1.html"><div class="rosa1 filterDiv eixo1">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
-        <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
-        <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 1</p>
-        <p class="TipoPublicacao2">Vídeo</p>
-      </div></a>
-
-      <a href="./Artigos/artigo1.html"><div class="rosa1 filterDiv eixo1">
-        <p class="DataPublicacao">12 de novembro de 2020</p>
+      <a href="./Videos/video1.html"><div class="rosa1fundo filterDiv eixo1" style="background-image: url(Fundos/Eixo1/Video1-eixo1.png);">
+       <!-- <p class="DataPublicacao">12 de novembro de 2020</p>
         <h2 class="TituloPublicacao">Introdução ao Projeto</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
         <p class="EixoPublicacao">Eixo 1</p>
-        <p class="TipoPublicacao">Artigo</p>  
+        <p class="TipoPublicacao">Artigo</p> --> 
 
       </div></a>
 
-      <div class="rosa1 filterDiv eixo1">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
-        <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
+      <a href="./Artigos/artigo1.html"><div class="rosa1fundo filterDiv eixo1" style="background-image: url(Fundos/Eixo1/artigo1-eixo1.png);">
+       <!-- <p class="DataPublicacao">12 de novembro de 2020</p>
+        <h2 class="TituloPublicacao">Introdução ao Projeto</h2>
+        <p class="AutorPublicacao">Por Sérgio Branco</p>
+        <p class="EixoPublicacao">Eixo 1</p>
+        <p class="TipoPublicacao">Artigo</p> --> 
+
+      </div></a>
+
+      <a href="./Artigos/artigo1.html"><div class="rosa1fundo filterDiv eixo1" style="background-image: url(Fundos/Eixo1/artigo1-eixo1.png);">
+       <!-- <p class="DataPublicacao">10 de novembro de 2020</p>
+        <h2 class="TituloPublicacao">O título deste artigo é o seguinte e <br>ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
         <p class="EixoPublicacao2">Eixo 1</p>
-        <p class="TipoPublicacao2">Artigo</p>
+        <p class="TipoPublicacao2">Artigo</p> -->
       </div></a>
-      <div class="laranja2 filterDiv eixo2">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="laranja2fundo filterDiv eixo2" style="background-image: url(Fundos/Eixo2/Vídeo1-eixo2.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
         <p class="EixoPublicacao2">Eixo 2</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="laranja2 filterDiv eixo2">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="laranja2fundo filterDiv eixo2" style="background-image: url(Fundos/Eixo2/Vídeo1-eixo2.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 3</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="amarelo3 filterDiv eixo3">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="amarelo3fundo filterDiv eixo3" style="background-image: url(Fundos/Eixo3/Video1-eixo3.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 3</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="verde4 filterDiv eixo4">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="verde4fundo filterDiv eixo4" style="background-image: url(Fundos/Eixo4/Vídeo1-eixo4.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 4</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="cinza5 filterDiv eixo5">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="cinza5fundo filterDiv eixo5" style="background-image: url(Fundos/Eixo5/Video1-eixo5.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 5</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="azulclaro6 filterDiv eixo6">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="azulclaro6fundo filterDiv eixo6" style="background-image: url(Fundos/Eixo6/Video1-eixo6.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 6</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="azulmedio7 filterDiv eixo7">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="azulmedio7fundo filterDiv eixo7" style="background-image: url(Fundos/Eixo7/Vídeo1-eixo7.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 7</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="azulescuro8 filterDiv eixo8">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+
+      <a href="./Artigos/artigo1.html"><div class="azulescuro8fundo filterDiv eixo8" style="background-image: url(Fundos/Eixo8/Vídeo1-eixo8.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 8</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="rosa9 filterDiv eixo9">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="rosas9fundo filterDiv eixo9" style="background-image: url(Fundos/Eixo9/Vídeo1-eixo9.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 9</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="roxo10 filterDiv eixoDez">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="roxo10fundo filterDiv eixoDez" style="background-image: url(Fundos/Eixo10/Vídeo1-eixo10.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 10</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="amareloclaro11 filterDiv eixoOnze">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="amareloclaro11fundo filterDiv eixoOnze" style="background-image: url(Fundos/Eixo11/Vídeo1-eixo11.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 11</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
-      <div class="ultimo12 filterDiv eixoDoze">
-        <p class="DataPublicacao">10 de novembro de 2020</p>
+      <a href="./Artigos/artigo1.html"><div class="ultimo12fundo filterDiv eixoDoze" style="background-image: url(Fundos/Eixo12/Vídeo1-eixo12.png);">
+        <!--<p class="DataPublicacao">10 de novembro de 2020</p>
         <h2 class="TituloPublicacao">O título deste artigo é o seguinte e ele é bem longo</h2>
         <p class="AutorPublicacao">Por Sérgio Branco</p>
-        <p class="EixoPublicacao2">Eixo 12</p>
-        <p class="TipoPublicacao2">Vídeo</p>
+        <p class="EixoPublicacao2">Eixo 2</p>
+        <p class="TipoPublicacao2">Vídeo</p>-->
       </div></a>
     </div>
 
