Tirando classe btn:not(.active)
btn:not(.active) {
  background-color: transparent;
  border: 1px solid #707070;
  color:var(--grey);
}

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div> 
 
       <div id="myBtnContainer">
-        <button class="btn active" onclick="filterSelection('all')"> Todos</button>
+        <button class="btn" onclick="filterSelection('all')"> Todos</button>
         <button class="btn rosa1" onclick="filterSelection('eixo1'); seleciona()"> Eixo 1 <div class="selecao" ></div>
         </button>
         <button class="btn laranja2" onclick="filterSelection('eixo2'); seleciona()"> Eixo 2<div class="selecao"></div></button>
