--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="topo">
-      <a href="index.html"><img src="images/logo.png" height="94" width="421"></a>
+      <a href="index.html"><img src="images/logo.png"></a>
 
       <div class="descricao">
         <p>Um Caso de Arte é um projeto do ITS Rio que busca explorar a interseção entre cultura e direito com exemplos práticos e de forma acessível. Como um acervo de conteúdo com foco em Direito Autoral, queremos compartilhar os aspectos atualizados desse debate.</p>
