media query de vídeos e artigos

--- a/Videos/video1.html
+++ b/Videos/video1.html
@@ -30,7 +30,7 @@
 
 
         <div class="video-responsive" style="text-align: center;" >
-            <iframe src="https://www.youtube.com/embed/uBF7mp7H_ng" height="660" width="1080" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/uBF7mp7H_ng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <footer>
