correção do footer

--- a/Artigos/artigo1.html
+++ b/Artigos/artigo1.html
@@ -60,32 +60,31 @@
     </section>
         
     <footer>
-        <div class="flex-container">
-          <div>
-            <a href="https://itsrio.org/pt/home/">
-              <img src="images/ITS_Logos.png">
-            </a>
-          </div>
-  
-          <div class="contatos">
-            <p>Contatos</p>
-  
-            <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
-            <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
-          </div>
+      <div class="flex-container">
+        <div>
+          <a href="https://itsrio.org/pt/home/">
+            <img src="../images/ITS_Logos.png">
+          </a>
         </div>
-  
-        <div class="flex-container">
-          <div class="politica">
-  
-            &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
-  
-          </div>
+
+        <div class="contatos">
+          <p>Contatos</p>
+
+          <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
+          <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
         </div>
-        <p style="text-align: center">
-          2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
-        </p>
-      </footer>
+
+        <div class="politica">
+
+          &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
+
+          <p class="endereco">
+            2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
+          </p>
+
+        </div>
+      </div>
+    </footer>
 
 </body>
 
