--- a/index.html
+++ b/index.html
@@ -176,18 +176,17 @@
           <a href="mailto:its@itsrio.org">its@itsrio.org </a> |
           <a href="mailto:imprensa@itsrio.org">imprensa@itsrio.org</a>
         </div>
-      </div>
 
-      <div class="flex-container">
         <div class="politica">
 
           &copy; <a href="https://itsrio.org/pt/comunicados/politica-privacidade/" target="blank">Política de privacidade </a>
 
+          <p class="endereco">
+            2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
+          </p>
+
         </div>
       </div>
-      <p style="text-align: center">
-        2021 | R. Da Assembléia, 10, 40º andar, sala 4011 — Centro, RJ | whatsapp: (21) 96574-4138
-      </p>
     </footer>
 
 
